[gd_scene load_steps=11 format=2]

[ext_resource path="res://FinalPoem.gd" type="Script" id=1]
[ext_resource path="res://Credits.gd" type="Script" id=2]
[ext_resource path="res://fonts/Roboto-Light.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Main.gd" type="Script" id=5]
[ext_resource path="res://images/text1.png" type="Texture" id=6]
[ext_resource path="res://toFinal.gd" type="Script" id=12]

[sub_resource type="DynamicFont" id=1]
size = 43
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 45
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 39
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
margin_left = 1440.0
margin_top = 270.0
margin_right = 1920.0
margin_bottom = 810.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[fill]Po desetih dneh osamitve na vasi sem lahko raziskovala občutke, ki so se ob tem pojavljali. Kdo sem jaz na vasi, kaj je moje mesto tukaj? Hkrati pa soocanje z obcutki samote, ki se pojavljajo. Bili so dnevi, ko nisem srecala nikogar, čcez dan tega nisem opazila, tega sem se zavedala komaj zvecer. Ko je temno in tiho. Vecer na vasi je lahko izjemno osamljen ampak lahko je pa tudi zelo caroben. Ce se le prepustis tisini in vsem zvokom, ki jim ne znas vedno pripisati izvora.[/fill]"
text = "Po desetih dneh osamitve na vasi sem lahko raziskovala občutke, ki so se ob tem pojavljali. Kdo sem jaz na vasi, kaj je moje mesto tukaj? Hkrati pa soocanje z obcutki samote, ki se pojavljajo. Bili so dnevi, ko nisem srecala nikogar, čcez dan tega nisem opazila, tega sem se zavedala komaj zvecer. Ko je temno in tiho. Vecer na vasi je lahko izjemno osamljen ampak lahko je pa tudi zelo caroben. Ce se le prepustis tisini in vsem zvokom, ki jim ne znas vedno pripisati izvora."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SceneHolder" type="Node" parent="."]

[node name="toFinal" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -289.0
margin_top = -267.0
margin_right = 291.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true
stretch_mode = 5
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Tween2" type="Tween" parent="."]

[node name="FinalPoem" type="Control" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="FinalPoem"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -228.0
margin_top = -83.5
margin_right = 228.0
margin_bottom = 83.5
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="FinalPoem/VBoxContainer"]
margin_right = 456.0
margin_bottom = 53.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "JESEN NA VASI"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="FinalPoem/VBoxContainer"]
margin_top = 57.0
margin_right = 456.0
margin_bottom = 110.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "ko se selijo jate ptic"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="FinalPoem/VBoxContainer"]
margin_top = 114.0
margin_right = 456.0
margin_bottom = 167.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "je ljudem tesno pri srcu"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="FinalPoem"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -228.0
margin_top = -280.0
margin_right = 228.0
margin_bottom = -227.0
custom_colors/font_color = Color( 0.584314, 0.584314, 0.584314, 1 )
custom_fonts/font = SubResource( 3 )
text = "Ivan Volarič Feo"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Control" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Credits"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -323.0
margin_top = 260.0
margin_right = 323.0
margin_bottom = 506.0
mouse_default_cursor_shape = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[center][color=grey]avtorica[/color] Ajda Zupan
[color=grey]programiranje[/color] Martin Ekar Fidermuc

Sužid, 2022
[/center]"
text = "avtorica Ajda Zupan
programiranje Martin Ekar Fidermuc

Sužid, 2022
"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="img_clicked" from="toFinal" to="." method="_on_toFinal_img_clicked"]
[connection signal="mouse_entered" from="toFinal" to="toFinal" method="_on_toFinal_mouse_entered"]
[connection signal="mouse_exited" from="toFinal" to="toFinal" method="_on_toFinal_mouse_exited"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="showCredits" from="FinalPoem" to="." method="_on_FinalPoem_showCredits"]
[connection signal="ending" from="Credits" to="." method="_on_Credits_ending"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
